# bnm-mod-menu

./: README.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  ark-recode.cpp  harem-fantasy.cpp  horny-villa.cpp  kinky-cats.cpp  mafia-queens.cpp  native-lib.cpp  passion-industry.cpp  wet-wealth.cpp  what-in-hell.cpp
app/src/main/cpp/BNM/: Android.mk  CMakeLists.txt  README.md
app/src/main/cpp/BNM/include/BNM/: BasicMonoStructures.hpp  ComplexMonoStructures.hpp  FieldBase.hpp  Helpers.hpp  Il2CppHeaders.hpp  MethodBase.hpp  OmathBridge.hpp  PropertyBase.hpp  UnityStructures.hpp
app/src/main/cpp/BNM/include/BNM/Il2CppHeaders/: 6000.x.h
app/src/main/cpp/BNM/include/BNM/UnityStructures/: Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
app/src/main/cpp/BNM/include/BNM/UserSettings/: GlobalSettings.hpp
app/src/main/cpp/BNM/src/: AssemblerUtils.cpp  Class.cpp  ClassesManagement.cpp  Exceptions.cpp  Image.cpp  Internals.cpp  Loading.cpp  Logging.cpp  Utils.cpp
app/src/main/cpp/BNM/src/private/: Internals.hpp  Logging.hpp  MetadataPool.hpp
app/src/main/cpp/dobby/include/: dobby.h  dobby_vtable.h
app/src/main/cpp/include/: icon.h  utils.h
app/src/main/java/com/android/support/: Menu.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
